@@ -1972,6 +1972,7 @@ command to generate the output files.
       <match type="string" value="&lt;svg" offset="0:64"/>
     </magic>
     <glob pattern="*.svg"/>
+    <glob pattern="*.svgz"/>
   </mime-type>
   <mime-type type="image/tiff">
     <_comment>TIFF image</_comment>
